--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   // ★ここをあなたの値に差し替え
   const LIFF_ID = "LIFF_ID_HERE";
   const SUPABASE_URL = "SUPABASE_URL_HERE";
-  const SUPABASE_ANON_KEY = "SUPABASE_ANON_KEY_HERE";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imptb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
 
   const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
