--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 <script>
   // ★ここをあなたの値に差し替え
-  const LIFF_ID = "LIFF_ID_HERE";
-  const SUPABASE_URL = "SUPABASE_URL_HERE";
+  const LIFF_ID = "2008829974-k2ClDIBL";
+  const SUPABASE_URL = "https://jmobmcphzqxbybkqpwfd.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imptb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
 
   const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
