--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     body{font-family:system-ui, -apple-system, "Segoe UI", sans-serif; margin:12px; line-height:1.5;}
     .topbar{display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-bottom:10px;}
     .badge{font-size:13px; color:#444;}
-    select, button, input{padding:10px; font-size:16px;}
+    select, button{padding:10px; font-size:16px;}
     #status{font-size:13px; color:#666;}
     .hint{font-size:12px; color:#666; margin:6px 0 10px;}
     .fc .fc-toolbar-title{font-size:18px;}
 
-    /* ヘッダが重なるのを避ける */
+    /* 日付ヘッダが重ならないように */
     .fc .fc-col-header-cell-cushion{
       white-space: normal;
       font-size: 12px;
@@ -22,19 +22,31 @@
       padding: 4px 2px;
     }
 
-    /* 予約モーダル */
+    /* ===== モーダル ===== */
     .overlay{
       position:fixed; inset:0; background:rgba(0,0,0,.45);
       display:none; align-items:center; justify-content:center; padding:16px; z-index:9999;
     }
     .modal{
-      width:min(520px, 100%); background:#fff; border-radius:14px; padding:14px;
+      width:100%;
+      max-width:420px;   /* ← 横幅を抑える */
+      background:#fff;
+      border-radius:14px;
+      padding:14px;
       box-shadow:0 10px 30px rgba(0,0,0,.2);
     }
     .modal h3{margin:0 0 8px 0; font-size:18px;}
     .modal .row{display:grid; grid-template-columns:1fr 1fr; gap:10px;}
     .modal label{display:block; font-size:13px; color:#444; margin-top:10px;}
-    .modal textarea{width:100%; padding:10px; font-size:16px; margin-top:6px;}
+    .modal textarea{
+      width:100%;        /* ← はみ出し防止 */
+      max-width:100%;
+      box-sizing:border-box;
+      padding:10px;
+      font-size:16px;
+      margin-top:6px;
+      resize:vertical;
+    }
     .modal .actions{display:flex; gap:10px; justify-content:flex-end; margin-top:12px;}
     .small{font-size:12px; color:#666;}
   </style>
@@ -43,7 +55,7 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- FullCalendar（CDN） -->
+  <!-- FullCalendar -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
 </head>
@@ -52,22 +64,19 @@
   <div class="topbar">
     <b>社用車予約</b>
     <span id="status">初期化中…</span>
-
     <span class="badge">車：</span>
     <select id="car"></select>
-
     <button id="reloadBtn">再読み込み</button>
   </div>
 
   <div class="hint">
-    ・時間枠を<strong>タップ</strong>すると、開始→終了を<strong>15分刻み</strong>で選んで予約できます<br>
-    ・終日（All-Day）は<strong>終日</strong>表示。ここをクリックすると <strong>00:00〜24:00</strong> を選択できます<br>
-    ・自分の予約はクリックでキャンセルできます（他人の予約は不可）
+    ・時間枠をタップして開始→終了を15分刻みで選択<br>
+    ・終日をタップすると 00:00〜24:00 を選択できます
   </div>
 
   <div id="calendar"></div>
 
-  <!-- 予約モーダル -->
+  <!-- モーダル -->
   <div id="overlay" class="overlay">
     <div class="modal">
       <h3>予約作成</h3>
@@ -75,17 +84,17 @@
 
       <div class="row">
         <div>
-          <label>開始（15分刻み）</label>
+          <label>開始</label>
           <select id="startSel"></select>
         </div>
         <div>
-          <label>終了（15分刻み）</label>
+          <label>終了</label>
           <select id="endSel"></select>
         </div>
       </div>
 
       <label>用途メモ（任意）</label>
-      <textarea id="note" rows="2" placeholder="例：顧客訪問、備品搬入など"></textarea>
+      <textarea id="note" rows="2"></textarea>
 
       <div class="actions">
         <button id="cancelModalBtn">キャンセル</button>
@@ -95,366 +104,80 @@
   </div>
 
 <script>
-  // ✅ あなたの値をセット済み
   const LIFF_ID = "2008829976-rJa7ANlR";
   const SUPABASE_URL = "https://jmobmcphzqxbybkqpwfd.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imptb2JtY3BoenF4Ynlia3Fwd2ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2NjkyMTMsImV4cCI6MjA4MzI0NTIxM30.TTaR9DKpCtkWa3RFB9zE7IydwhD9bWGIbp83YbUX8v8";
 
-  const sb = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const $ = (id)=>document.getElementById(id);
+  let me={}, calendar=null, modalYmd=null;
 
-  const $ = (id) => document.getElementById(id);
+  const pad=n=>String(n).padStart(2,"0");
+  const times=[...Array(96)].map((_,i)=>`${pad(Math.floor(i/4))}:${pad((i%4)*15)}`);
 
-  let me = { userId: null, displayName: null };
-  let calendar = null;
+  function toYmd(d){return `${d.getFullYear()}-${pad(d.getMonth()+1)}-${pad(d.getDate())}`;}
+  function iso(ymd,t){let[d,h]=[ymd,t==="24:00"?24:parseInt(t)],m=t==="24:00"?0:parseInt(t.split(":")[1]);let dt=new Date(...ymd.split("-").map(Number));dt.setHours(h,m,0,0);if(t==="24:00")dt.setDate(dt.getDate()+1);return dt.toISOString();}
+  function round15(d){d=new Date(d);d.setSeconds(0,0);d.setMinutes(Math.round(d.getMinutes()/15)*15);return d;}
 
-  // モーダル用状態
-  let modalState = { dateYmd: null };
+  async function init(){
+    await liff.init({liffId:LIFF_ID});
+    if(!liff.isLoggedIn()) return liff.login();
+    me=await liff.getProfile();
+    $("status").textContent=`ログイン中：${me.displayName}`;
 
-  function setStatus(text){ $("status").textContent = text; }
+    const {data}=await sb.from("cars").select("*").order("id");
+    $("car").innerHTML=data.map(c=>`<option value="${c.id}">${c.name}</option>`).join("");
 
-  async function initLiff(){
-    await liff.init({ liffId: LIFF_ID });
-
-    if(!liff.isLoggedIn()){
-      setStatus("未ログイン：ログインします…");
-      liff.login();
-      return false;
-    }
-    const profile = await liff.getProfile();
-    me.userId = profile.userId;
-    me.displayName = profile.displayName;
-    setStatus(`ログイン中：${me.displayName}`);
-    return true;
-  }
-
-  async function loadCars(){
-    const { data, error } = await sb.from("cars").select("*").order("id");
-    if(error) throw error;
-    $("car").innerHTML = data.map(c => `<option value="${c.id}">${c.name}</option>`).join("");
-  }
-
-  function getSelectedCarId(){
-    return Number($("car").value);
-  }
-
-  function pad2(n){ return String(n).padStart(2, "0"); }
-
-  function toYmd(dateObj){
-    const y = dateObj.getFullYear();
-    const m = pad2(dateObj.getMonth()+1);
-    const d = pad2(dateObj.getDate());
-    return `${y}-${m}-${d}`;
-  }
-
-  function buildTimeOptions(){
-    // 00:00 ～ 23:45（15分刻み）
-    const opts = [];
-    for(let h=0; h<24; h++){
-      for(let m=0; m<60; m+=15){
-        opts.push(`${pad2(h)}:${pad2(m)}`);
-      }
-    }
-    return opts;
-  }
-
-  function setSelectOptions(selectEl, options, selected){
-    selectEl.innerHTML = options.map(v =>
-      `<option value="${v}" ${v===selected ? "selected":""}>${v}</option>`
-    ).join("");
-  }
-
-  function roundTo15(dateObj){
-    // ✅ クリック時刻を15分単位に丸める（ズレ防止）
-    const d = new Date(dateObj);
-    d.setSeconds(0, 0);
-    const m = d.getMinutes();
-    const rounded = Math.round(m / 15) * 15;
-    if(rounded === 60){
-      d.setHours(d.getHours() + 1);
-      d.setMinutes(0);
-    }else{
-      d.setMinutes(rounded);
-    }
-    return d;
-  }
-
-  function openModal(dateObj){
-    const ymd = toYmd(dateObj);
-    modalState.dateYmd = ymd;
-
-    const h = dateObj.getHours();
-    const m = dateObj.getMinutes();
-    const startDefault = `${pad2(h)}:${pad2(m)}`;
-
-    // 終了は開始+30分
-    const startMinutes = h*60 + m;
-    const endMinutes = Math.min(startMinutes + 30, 24*60);
-    const endH = Math.floor(endMinutes / 60);
-    const endM = endMinutes % 60;
-    const endDefault = (endMinutes >= 24*60) ? "24:00" : `${pad2(endH)}:${pad2(endM)}`;
-
-    const baseOptions = buildTimeOptions();      // 00:00～23:45
-    const endOptions = [...baseOptions, "24:00"]; // 終了は24:00も可
-
-    setSelectOptions($("startSel"), baseOptions, startDefault);
-    setSelectOptions($("endSel"), endOptions, endDefault);
-
-    $("note").value = "";
-    $("modalDate").textContent = `${ymd}（車：${$("car").selectedOptions[0]?.textContent || ""}）`;
-    $("overlay").style.display = "flex";
-  }
-
-  function openModalAllDay(dateObj){
-    const ymd = toYmd(dateObj);
-    modalState.dateYmd = ymd;
-
-    const baseOptions = buildTimeOptions();       // 00:00～23:45
-    const endOptions = [...baseOptions, "24:00"]; // 終了は24:00も可
-
-    setSelectOptions($("startSel"), baseOptions, "00:00");
-    setSelectOptions($("endSel"), endOptions, "24:00");
-
-    $("note").value = "";
-    $("modalDate").textContent = `${ymd}（終日 / 車：${$("car").selectedOptions[0]?.textContent || ""}）`;
-    $("overlay").style.display = "flex";
-  }
-
-  function closeModal(){
-    $("overlay").style.display = "none";
-  }
-
-  function parseLocalISO(ymd, hhmm){
-    // hhmm が "24:00" の場合は翌日 00:00 として扱う
-    const [y, m, d] = ymd.split("-").map(Number);
-    let [hh, mm] = hhmm.split(":").map(Number);
-    let dt = new Date(y, m-1, d, hh, mm, 0, 0);
-    if(hhmm === "24:00"){
-      dt = new Date(y, m-1, d+1, 0, 0, 0, 0);
-    }
-    return dt.toISOString();
-  }
-
-  async function fetchReservations(carId, startISO, endISO){
-    const { data, error } = await sb
-      .from("reservations")
-      .select("id, car_id, user_id, user_name, start_time, end_time, note")
-      .eq("car_id", carId)
-      .lt("start_time", endISO)
-      .gt("end_time", startISO)
-      .order("start_time", { ascending: true });
-    if(error) throw error;
-    return data;
-  }
-
-  async function hasOverlap(carId, startISO, endISO){
-    const { data, error } = await sb
-      .from("reservations")
-      .select("id")
-      .eq("car_id", carId)
-      .lt("start_time", endISO)
-      .gt("end_time", startISO)
-      .limit(1);
-    if(error) throw error;
-    return data.length > 0;
-  }
-
-  async function createReservation(carId, startISO, endISO, note){
-    const overlap = await hasOverlap(carId, startISO, endISO);
-    if(overlap){
-      alert("その時間帯は既に予約があります。別の時間にしてください。");
-      return false;
-    }
-    const { error } = await sb.from("reservations").insert({
-      car_id: carId,
-      user_id: me.userId,
-      user_name: me.displayName,
-      start_time: startISO,
-      end_time: endISO,
-      note: (note || "").trim()
+    calendar=new FullCalendar.Calendar($("calendar"),{
+      locale:"ja",
+      timeZone:"Asia/Tokyo",
+      firstDay:1,                 /* ← 月曜始まり */
+      initialView:"timeGridWeek",
+      buttonText:{today:"今日",timeGridDay:"日",timeGridWeek:"週"},
+      headerToolbar:{left:"prev,next today",center:"title",right:"timeGridDay,timeGridWeek"},
+      dayHeaderContent:a=>({html:`${a.date.getMonth()+1}/${a.date.getDate()}<br>(${["日","月","火","水","木","金","土"][a.date.getDay()]})`}),
+      allDaySlot:true,
+      allDayText:"終日",
+      slotDuration:"00:15:00",
+      slotMinTime:"00:00:00",
+      slotMaxTime:"24:00:00",
+      slotLabelFormat:{hour:"2-digit",minute:"2-digit",hour12:false},
+      eventTimeFormat:{hour:"2-digit",minute:"2-digit",hour12:false},
+      datesSet:loadEvents,
+      dateClick:i=>openModal(i.allDay?i.date:round15(i.date)),
+      eventClick:e=>e.event.extendedProps.uid===me.userId&&del(e.event.id)
     });
-    if(error) throw error;
-    return true;
-  }
-
-  async function cancelReservation(reservationId){
-    if(!confirm("この予約をキャンセルしますか？")) return false;
-
-    const { error } = await sb
-      .from("reservations")
-      .delete()
-      .eq("id", reservationId)
-      .eq("user_id", me.userId);
-
-    if(error){
-      alert("キャンセルできませんでした（自分の予約のみキャンセル可）");
-      return false;
-    }
-    return true;
-  }
-
-  function buildEvents(reservations){
-    return reservations.map(r => {
-      const isMine = (r.user_id === me.userId);
-      const title = isMine
-        ? `（自分）${r.note ? r.note : ""}`.trim()
-        : `${r.user_name}${r.note ? " / " + r.note : ""}`;
-
-      return {
-        id: r.id,
-        title,
-        start: r.start_time,
-        end: r.end_time,
-        extendedProps: {
-          user_id: r.user_id,
-          user_name: r.user_name,
-          note: r.note
-        }
-      };
-    });
-  }
-
-  async function refetchCalendarEvents(){
-    if(!calendar) return;
-
-    const carId = getSelectedCarId();
-    const view = calendar.view;
-
-    const startISO = view.activeStart.toISOString();
-    const endISO = view.activeEnd.toISOString();
-
-    const reservations = await fetchReservations(carId, startISO, endISO);
-    const events = buildEvents(reservations);
-
-    calendar.removeAllEvents();
-    calendar.addEventSource(events);
-  }
-
-  function initCalendar(){
-    const el = document.getElementById("calendar");
-
-    calendar = new FullCalendar.Calendar(el, {
-      initialView: "timeGridWeek",
-      timeZone: "Asia/Tokyo",
-      locale: "ja",
-
-      // ✅ Day/Week を日本語に
-      buttonText: { today: "今日", timeGridDay: "日", timeGridWeek: "週" },
-
-      headerToolbar: {
-        left: "prev,next today",
-        center: "title",
-        right: "timeGridDay,timeGridWeek"
-      },
-
-      // ✅ 「1/6(月)」などを2行表示して重なり回避
-      dayHeaderContent: (arg) => {
-        const d = arg.date;
-        const m = d.getMonth() + 1;
-        const day = d.getDate();
-        const wd = ["日","月","火","水","木","金","土"][d.getDay()];
-        return { html: `${m}/${day}<br>(${wd})` };
-      },
-
-      // ✅ 終日枠を表示＆ラベルを「終日」に
-      allDaySlot: true,
-      allDayText: "終日",
-
-      // ✅ 15分単位
-      slotDuration: "00:15:00",
-      snapDuration: "00:15:00",
-
-      // ✅ 00:00〜24:00 表示
-      slotMinTime: "00:00:00",
-      slotMaxTime: "24:00:00",
-
-      // ✅ 24時間表記
-      slotLabelFormat: { hour: "2-digit", minute: "2-digit", hour12: false },
-      eventTimeFormat: { hour: "2-digit", minute: "2-digit", hour12: false },
-
-      // ドラッグ選択は使わない
-      selectable: false,
-
-      // 表示範囲が変わったら取り直し
-      datesSet: async () => {
-        try { await refetchCalendarEvents(); }
-        catch(e){ console.error(e); alert("予約データの取得に失敗しました"); }
-      },
-
-      // ✅ タップした時にモーダル（終日/時間枠）
-      dateClick: (info) => {
-        if (info.allDay) {
-          openModalAllDay(info.date);
-        } else {
-          openModal(roundTo15(info.date));
-        }
-      },
-
-      // 自分の予約だけキャンセル
-      eventClick: async (info) => {
-        const isMine = info.event.extendedProps.user_id === me.userId;
-        if(!isMine){
-          alert("他人の予約はキャンセルできません。");
-          return;
-        }
-        const ok = await cancelReservation(info.event.id);
-        if(ok) await refetchCalendarEvents();
-      }
-    });
-
     calendar.render();
+    loadEvents();
   }
 
-  // モーダル操作
-  $("cancelModalBtn").addEventListener("click", closeModal);
+  async function loadEvents(){
+    const v=calendar.view, car=+$("car").value;
+    const {data}=await sb.from("reservations").select("*")
+      .eq("car_id",car).lt("start_time",v.activeEnd.toISOString())
+      .gt("end_time",v.activeStart.toISOString());
+    calendar.removeAllEvents();
+    data.forEach(r=>calendar.addEvent({id:r.id,start:r.start_time,end:r.end_time,title:r.user_name,extendedProps:{uid:r.user_id}}));
+  }
 
-  $("saveModalBtn").addEventListener("click", async () => {
-    try{
-      const carId = getSelectedCarId();
-      const startStr = $("startSel").value; // HH:MM
-      const endStr = $("endSel").value;     // HH:MM or 24:00
-      const note = $("note").value;
+  function openModal(d){
+    modalYmd=toYmd(d);
+    $("startSel").innerHTML=times.map(t=>`<option>${t}</option>`).join("");
+    $("endSel").innerHTML=[...times,"24:00"].map(t=>`<option>${t}</option>`).join("");
+    $("overlay").style.display="flex";
+    $("modalDate").textContent=modalYmd;
+  }
 
-      const startISO = parseLocalISO(modalState.dateYmd, startStr);
-      const endISO = parseLocalISO(modalState.dateYmd, endStr);
+  $("saveModalBtn").onclick=async()=>{
+    const s=iso(modalYmd,$("startSel").value), e=iso(modalYmd,$("endSel").value);
+    if(new Date(s)>=new Date(e)) return alert("終了は開始より後にしてください");
+    await sb.from("reservations").insert({car_id:+$("car").value,user_id:me.userId,user_name:me.displayName,start_time:s,end_time:e,note:$("note").value});
+    $("overlay").style.display="none";
+    loadEvents();
+  };
+  $("cancelModalBtn").onclick=()=>{$("overlay").style.display="none";};
 
-      if(new Date(startISO) >= new Date(endISO)){
-        alert("終了は開始より後にしてください。");
-        return;
-      }
-
-      const ok = await createReservation(carId, startISO, endISO, note);
-      if(ok){
-        closeModal();
-        await refetchCalendarEvents();
-      }
-    }catch(e){
-      console.error(e);
-      alert("予約に失敗しました（設定値やDBを確認）");
-    }
-  });
-
-  (async () => {
-    try{
-      const ok = await initLiff();
-      if(!ok) return;
-
-      await loadCars();
-
-      $("car").addEventListener("change", async ()=> {
-        try{ await refetchCalendarEvents(); } catch(e){ console.error(e); }
-      });
-
-      $("reloadBtn").addEventListener("click", async ()=> {
-        try{ await refetchCalendarEvents(); } catch(e){ console.error(e); }
-      });
-
-      initCalendar();
-    }catch(e){
-      console.error(e);
-      setStatus("初期化エラー：設定（LIFF/Supabase）を確認してください");
-      alert("初期化に失敗しました。コンソールを確認してください。");
-    }
-  })();
+  init();
 </script>
 </body>
 </html>
